@@ -1,4 +1,5 @@
 0.7.0
+* spf: new module: Sprintf module (2008-09-13)
 * log: new module: Logging module (2008-09-09)
 * bis: new module: Bit input stream (2008-08-20)
 * gzp: new module: GZip base module (2008-06-28)
